--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,52 @@
+<!DOCTYPE html>
 <html>
- 
+
 <head>
-    <title>HTML body Text Attribute</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>UI Pop Up</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
- 
-<!-- body tag starts here -->
- 
-<body text="green", style="font-size:300%">
-    <center>         
-	<p>Welcome to the Project Class!!</p>
- 
-    </center>
-</body>
-<!-- body tag ends here -->
- 
+<body>
+
+	<h1>Wall Breaker</h1>
+	<img src = "darren_dexter logo clear.png" alt = "Wall Breaker Logo" width = "150" height = "75">
+
+  	<div>
+	<label>Incognito</label>
+    <label class = "switch">
+    	<input type = "checkbox" id = "switch1">
+    	<span class = "slider round"></span>
+  	</label>
+  	</div>
+
+  	<div>
+	<label>From Social</label>
+    <label class = "switch">
+    	<input type = "checkbox" id = "switch2">
+    	<span class = "slider round"></span>
+  	</label>
+  	</div>
+
+  	<div>
+	<label>Google Bot</label>
+    <label class = "switch">
+    	<input type = "checkbox" id = "switch3">
+    	<span class = "slider round"></span>
+  	</label>
+  	</div>
+
+	<label>Headers</label>
+    <label class = "switch">
+    	<input type = "checkbox" id = "switch4">
+    	<span class = "slider round"></span>
+  	</label>
+  	</div>
+
+    <p id = "result"></p>
+    <p id = "result1"></p>
+    <p id = "result2"></p>
+    <p id = "result3"></p>
+    <script src="script.js"></script>
+  </body> 
 </html>
