--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 <body>
 
 	<h1>Wall Breaker</h1>
-	<img src = "darren_dexter logo clear.png" alt = "Wall Breaker Logo" width = "150" height = "75">
+	<img src = "icon2.png" alt = "Wall Breaker Logo" width = "150" height = "75">
 
   	<div>
 	<label>Incognito</label>
